--- a/vanilla-js/src/assets/tailwind/tailwind.css
+++ b/vanilla-js/src/assets/tailwind/tailwind.css
@@ -428,6 +428,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .columns-3 {
   -moz-columns: 3;
        columns: 3;
